fix scrollbar on moz and make container width dynamic

--- a/src/css/solar_system.css
+++ b/src/css/solar_system.css
@@ -29,11 +29,13 @@ header {
 #solar-system {
     display: grid;
     place-items: center;
+    padding: 2vh 10vw;
+    max-width: 95vw;
 
     overflow: auto;
-    width: 94vw;
-    height: 94vh;
 
+    /* hide scrollbar */
+    scrollbar-width: none;
     &::-webkit-scrollbar {
         display: none;
     }
